Fix T88216: Cycles persistent data fails with animated object transform in instance